# Nintendoor64

./: Cargo.toml  Currentmode-Event-Nextmode-Notes.csv  README.md  deepseek_html_20260413_ed05b9.html  starzip.toml
.github/workflows/: deploy-dispatch.yml  schema-gen-ci.yml  schema-review.yml  schema_validate.yml  sonia-ai-n64-slice.yml  sonia_sync.yml  starzip-preview-validate.yml
ai_prompts/: build-agent-instructions.md
ai_tools/: cargo_ops.schema.json  sonia-build-agent.schema.json
ci/: check-schema-diff.py
config/: bondfpscore_stealth.toml
config/wayback/: signatures.yaml
crates/bond64-agent-api/src/: input.rs
crates/bondfpscore/src/: stealth_ai.rs  stealth_ai_tests.rs  stealth_config.rs
crates/build-manifest-core/src/: lib.rs
crates/build-manifest-gen/src/: main.rs
crates/c_api/: cbindgen.toml
crates/capi/: Cargo.toml  build.rs  cbindgen.toml
crates/capi/src/: lib.rs
crates/conk64-lua/src/: lib.rs  main.rs
crates/conker-npc-check/: Cargo.toml
crates/conker-npc-check/src/: checks.rs  main.rs  model.rs  scan.rs
crates/conker-schema/examples/: npc.alien.pouncer.json  npc.fire_imp.blood_count.json  npc.zombie.standard.json
crates/core_ecs/src/: determinism.rs
crates/deploy-request-core/src/: lib.rs
crates/gamemodeai-build/: Cargo.toml
crates/gamemodeai-build/src/: contract.rs  main.rs  trace.rs
crates/gamemodeai-build/tests/: lane_all_or_nothing.rs
crates/gamemodeai-rust-cli/: Cargo.toml
crates/gamemodeai-rust-cli/src/: contracts.rs  main.rs
crates/gamemodeai-session/src/: cli.rs  main.rs  session_profile.rs
crates/gamemodeai-toolchain/src/: main.rs
crates/n64-ai-checklist/: Cargo.toml
crates/n64-ai-checklist/src/: lib.rs
crates/n64-ai-checklist/tests/: conker_mini_check.rs
crates/n64-ai-gen-schemas/: Cargo.toml
crates/n64-ai-gen-schemas/schemas/: artifact-spec.schema.json
crates/n64-ai-gen-schemas/src/: lib.rs  types.rs
crates/n64-build-maintenance/src/: lib.rs  main.rs
crates/n64-constraints/src/: lib.rs
crates/n64-layout/src/: lib.rs  query.rs  sonia_bridge.rs
crates/retro-nes-core/src/: constraints.rs  ines.rs  lib.rs  packer.rs
crates/schema-guard/: Cargo.toml
crates/schema-guard/src/: main.rs
crates/sonia-build-agent/: Cargo.toml
crates/sonia-build-agent/src/: lib.rs
crates/sonia-build-agent/src/executors/: cargo.rs  mod.rs
crates/sonia-core/: Cargo.toml
crates/sonia-core-cli/src/: envelope.rs  error_codes.rs  main.rs
crates/sonia-core/src/: aichecklist.rs  blame_meta.rs  ci_failure.rs  command_descriptor.rs  lib.rs  main.rs  model.rs  session_mode.rs  sessioncidigest.rs  starzip_policy.rs  types.rs
crates/sonia-core/tests/: allowed_modes.rs
crates/sonia-featurelayout/src/: model.rs
crates/starzip-cli/src/: lib.rs  main.rs  preview.rs  preview_impl.rs
crates/starzip-core/src/: patch.rs  patchspec.rs
crates/starzip-preview-core/src/: api.rs
crates/wayback-core-net-echo/: Cargo.toml
crates/wayback-core-net-echo/src/: main.rs
crates/wayback-core-net/src/: lib.rs  tun_unix.rs  tun_windows.rs
crates/wayback-detect/: Cargo.toml
crates/wayback-detect/src/: lib.rs  signatures.rs
crates/wayback-scripting/src/: wasm_host.rs
crates/wayback-signatures-validate/: Cargo.toml
crates/wayback-signatures-validate/src/: main.rs
data/bondfpscore/guards/: default_state_machine.json
data/bondfpscore/lockon/: default.json
data/bondfpscore/missions/: example_objectives.json
data/bondfpscore/navgraphs/: example_map.json
data/bondfpscore/stealth/: default.json
docs/: Nintendoor64-SUPERPOWERS.md  ai-cargo-nintendoor64-integration.md  bond-style-pd-fps-stealth-core.md  iog-100-research-questions.md  iog-architecture.md  iog-overview.md  research_crates_iog.md  sonia-ai-model-next-directions.md  sonia-ai-model.md  sonia-implementation-steps-artifacts-starzip.md  sonia-n64-vertical-slice.md  wayback-net-architecture.md
docs/schema/: bond_guard_state_machine.schema.json  bond_lockon.schema.json  bond_navgraph.schema.json  bond_objectives.schema.json  bond_stealth.schema.json  system_contract.schema.json
docs/specs/: bond_guard_state_machine.md  bond_lockon_spec.md  bond_navgraph_spec.md  bond_objective_dag_spec.md  deterministic_system_contract.md  wayback-gamespy-master.md  wayback-tun-and-routing.md
docs/systems/: bondfpscore.stealth_ai.contract.json
examples/: build.conker.underworld.n64.contract.json
examples/artifactspec/: sonia_lua_example.json
examples/n64/artifacts/: test-texture-payload.json
examples/n64/constraints/: conker-mini.constraints.json
examples/n64/layouts/: conker-mini.layout.json  test-layout.json
examples/n64/patches/: conker-mini-title.patch.json  test-patch.json
examples/sonia/requests/: run-cargo-check.workspace.json
iog/: Cargo.toml
iog/crates/iog-protocol-model/src/: gamespy_identity.rs  lib.rs
iog/crates/wayback-core-net/: Cargo.toml
iog/crates/wayback-core-net/src/: lib.rs
iog/crates/wayback-dht/: Cargo.toml
iog/crates/wayback-dht/src/: lib.rs
iog/crates/wayback-dns/: Cargo.toml
iog/crates/wayback-dns/src/: lib.rs
iog/crates/wayback-master-gs/src/: lib.rs
iog/crates/wayback-proxy/: Cargo.toml
iog/crates/wayback-proxy/src/: main.rs
iog/crates/wayback-scripting/: Cargo.toml
iog/crates/wayback-scripting/examples/: gamespy_advertise.lua
iog/crates/wayback-scripting/src/: lib.rs
knowledgegraph/: features.sonia.json  systems.json  systems.nintendoor64.starzip.json
protocols/: sonia-json-rpc.toml
schemas/: artifact_spec.schema.json  n64-asset-manifest.schema.json  n64-budget-report.schema.json  n64-build-maintenance.schema.json  n64-constraints.schema.json  n64-patchspec.schema.json  n64-romlayout.schema.json  sonia-command-descriptor.schema.json  sonia-error-envelope.schema.json  starzip-patch-preview-command.schema.json  system_node.schema.json  wayback-signatures.schema.json
scripts/: stealth_init.lua
tools/build-trace-flamegraph/: Cargo.toml
tools/build-trace-flamegraph/src/: main.rs
tools/rust-macro-expand/: Cargo.toml
web/nintendoor64-dashboard/: index.html  package.json  vite.config.ts
(+25 files in other folders)
