[package]
name = "gamemodeai-rust-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"

[bin]
name = "gamemodeai-rust-cli"
path = "src/main.rs"

[[bin]]
name = "gamemodeai-rust-gen-schemas"
path = "src/bin/gen-schemas.rs"
