# crates/sonia-build-agent/Cargo.toml
[package]
name = "sonia-build-agent"
version = "0.1.0"
edition = "2021"
description = "Terminal-less, AI-native build orchestrator for Nintendoor64"
license = "MIT"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"

tokio = { version = "1.36", features = ["full"] }
tokio-stream = "0.1"
async-channel = "2.1"

clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tokio's Command is now in tokio::process; no extra crate is strictly required.
# If you want helpers, keep this; otherwise you can drop it.
tokio-process = "0.2"

regex = "1.10"

gamemodeai-session = { path = "../gamemodeai-session" }

[features]
default = ["full"]
full = []
sandbox = [] # future: Firecracker/gVisor integration

[[bin]]
name = "sonia-build-agent"
path = "src/bin/sonia-build-cli.rs"
