[package]
name = "build-trace-flamegraph"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
inferno = { version = "0.11", default-features = false, features = ["collapse", "flamegraph"] }
