[package]
name = "wayback-dht"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53", features = ["kad", "gossipsub", "tcp", "dns", "noise", "yamux"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
