[package]
name = "wayback-scripting"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
mlua = { version = "0.9", features = ["lua54", "async", "send"] }
wasmtime = "18"
iog-protocol-model = { path = "../iog-protocol-model" }
